# MakersVR

./: .gitignore  README.md
Design/: SW_BlockDiagram.drawio  SW_BlockDiagram_Alternate.drawio
Documentation/: MarkerTrackingLatency.txt  PreliminaryPartsList.ods
Documentation/Design/: HW_BlockDiagram_Full.drawio  HW_BlockDiagram_Tracking.drawio
MakersVR_Configurator/: .gitignore  Instructions.txt  Makefile  Makefile.vc  README.md  Testing.txt
MakersVR_Configurator/config/: calib.json  calib_GT.json  calib_backup.json  calib_real_backup.json  calib_sim_backup.json  config.json
MakersVR_Configurator/dependencies/OpenCV/: build.bat  build.sh  clean.bat  clean.sh  fetch.bat  fetch.sh
MakersVR_Configurator/dependencies/libusb/: build.bat  build.sh  clean.bat  fetch.bat  fetch.sh
MakersVR_Configurator/dependencies/wxWidgets/: build.bat  build.sh  clean.bat  fetch.bat  fetch.sh  setup.h
MakersVR_Configurator/include/: calibration.hpp  comm.h  comm.hpp  config.hpp  configurator.hpp  control.hpp  eigenutil.hpp  main.h  main.hpp  mesh.hpp  poseinference.hpp  testing.hpp  tracking.hpp  ui.hpp  util.h  util.hpp  visualization.hpp  wxbase.hpp
MakersVR_Configurator/lib/: libusb-1.0.source
MakersVR_Configurator/licenses/: eigen.source  glew.BSD3  libusb-1.0.source
MakersVR_Configurator/source/: calibration.cpp  comm.cpp  config.cpp  configurator.cpp  control.cpp  mesh.cpp  testing.cpp  tracking.cpp  ui.cpp  visualization.cpp
MakersVR_Configurator/src/: calibration.cpp  comm.cpp  config.cpp  configurator.cpp  control.cpp  eigenutil.cpp  emulator.cpp  main.cpp  main_emulator.cpp  mesh.cpp  poseinference.cpp  testing.cpp  tracking.cpp  ui.cpp  util.cpp  visualization.cpp
MakersVR_MarkerDetector/: CMakeLists.txt  Instructions.txt  LICENSE  README.md  blobdetection.cpp  blobdetection.hpp  build.sh  install.sh  log.sh  main_gl_detector.cpp  marker-detector.service  start.sh  stop.sh  uninstall.sh
MakersVR_MarkerDetector/camera/: camGL.c  camGL.h  gcs.c  gcs.h
MakersVR_MarkerDetector/gl/: defines.hpp  eglUtil.c  eglUtil.h  mesh.cpp  mesh.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp
MakersVR_MarkerDetector/gl_shaders/BlobES/: frag_blobDetectRGB.glsl  frag_blobDetectY.glsl  frag_blobDetectYUV.glsl  frag_blobEncode.glsl  frag_blobViz.glsl  vert.glsl
MakersVR_MarkerDetector/gl_shaders/CamES/: frag_camRGB.glsl  frag_camY.glsl  frag_camYUV.glsl
MakersVR_MarkerDetector/gl_shaders/PointES/: frag.glsl  vert.glsl
MakersVR_MarkerDetector/licenses/: VC4CV.MIT
MakersVR_MarkerDetector/qpu_programs/: qpu_blob_tiled_min.asm  qpu_copy.asm  vc4.qinc
MakersVR_MarkerDetector/source/: blobdetection.cpp  blobdetection.hpp  fbUtil.c  fbUtil.h  main_detector.cpp
MakersVR_MarkerDetector/source/camera/: gcs.c  gcs.h
MakersVR_MarkerDetector/source/qpu/: mailbox.c  mailbox.h  qpu_base.c  qpu_base.h  qpu_info.c  qpu_info.h  qpu_program.c  qpu_program.h  qpu_registers.h
MakersVR_MarkerTracker/: Instructions.txt  Makefile  README.md
MakersVR_MarkerTracker/Drivers/CMSIS/Device/ST/: stm32.h
MakersVR_MarkerTracker/inc/: main.h  usbd.h
MakersVR_MarkerTracker/libusb/inc/: usb.h  usb_std.h  usbd_core.h
MakersVR_MarkerTracker/libusb/src/: memmap.inc  usbd_core.c  usbd_devfs.c
MakersVR_MarkerTracker/licenses/: STM32F103_HAL.BSD3
MakersVR_MarkerTracker/src/: main.c  usbd.c
